--- a/editorconfig/dotnet/F0.EditorConfig.DotNet/F0.EditorConfig.DotNet.CSharp/F0.EditorConfig.DotNet.CSharp.csproj
+++ b/editorconfig/dotnet/F0.EditorConfig.DotNet/F0.EditorConfig.DotNet.CSharp/F0.EditorConfig.DotNet.CSharp.csproj
@@ -1,18 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <LangVersion>latest</LangVersion>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <LangVersion>latest</LangVersion>
+    <LangVersion>7.3</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.CSharp" Version="4.5.0" />
     <PackageReference Include="Octokit" Version="0.32.0" />
   </ItemGroup>
 
