--- a/editorconfig/dotnet/.editorconfig
+++ b/editorconfig/dotnet/.editorconfig
@@ -28,6 +28,10 @@ charset = utf-8-bom
 indent_style = tab
 #indent_size = 4
 
+[*.xml]
+indent_style = space
+indent_size = 2
+
 [*.{cs,vb}]
 dotnet_style_qualification_for_field = false:suggestion
 dotnet_style_qualification_for_property = false:suggestion
