--- a/editorconfig/dotnet/F0.EditorConfig.DotNet/F0.EditorConfig.DotNet.CSharp/F0.EditorConfig.DotNet.CSharp.csproj
+++ b/editorconfig/dotnet/F0.EditorConfig.DotNet/F0.EditorConfig.DotNet.CSharp/F0.EditorConfig.DotNet.CSharp.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
@@ -6,7 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
-    <PackageReference Include="Octokit" Version="0.46.0" />
+    <PackageReference Include="Octokit" Version="0.48.0" />
   </ItemGroup>
 
 </Project>
