--- a/editorconfig/dotnet/.editorconfig
+++ b/editorconfig/dotnet/.editorconfig
@@ -7,26 +7,20 @@ tab_width = 4
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[*.sln]
+[*.{xaml,razor,html,htm,cshtml,sln}]
 indent_style = tab
-#indent_size = 4
-
-[*.{csproj,vbproj,props,targets}]
-indent_style = space
-indent_size = 2
 
 [*.{cs,csx,vb,vbx}]
 indent_style = tab
-#indent_size = 4
 max_line_length = 130
 
-[*.xaml]
-indent_style = tab
-#indent_size = 4
-
-[*.xml]
+[*.{xml,csproj,vbproj,props,targets,resx,vsixmanifest,runsettings,json,slnf,yml,yaml}]
 indent_style = space
 indent_size = 2
+
+[*.{css,ps1}]
+indent_style = space
+indent_size = 4
 
 [*.{cs,vb}]
 dotnet_style_qualification_for_field = false:suggestion
