--- a/editorconfig/dotnet/F0.EditorConfig.DotNet/F0.EditorConfig.DotNet.CSharp/F0.EditorConfig.DotNet.CSharp.csproj
+++ b/editorconfig/dotnet/F0.EditorConfig.DotNet/F0.EditorConfig.DotNet.CSharp/F0.EditorConfig.DotNet.CSharp.csproj
@@ -1,12 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
+    <EnableNETAnalyzers>false</EnableNETAnalyzers>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
-    <PackageReference Include="Octokit" Version="0.48.0" />
+    <PackageReference Include="Octokit" Version="0.50.0" />
   </ItemGroup>
 
 </Project>
