--- a/editorconfig/dotnet/F0.EditorConfig.DotNet/F0.EditorConfig.DotNet.VisualBasic/F0.EditorConfig.DotNet.VisualBasic.vbproj
+++ b/editorconfig/dotnet/F0.EditorConfig.DotNet/F0.EditorConfig.DotNet.VisualBasic/F0.EditorConfig.DotNet.VisualBasic.vbproj
@@ -2,7 +2,8 @@
 
   <PropertyGroup>
     <RootNamespace>F0.EditorConfig.DotNet.VisualBasic</RootNamespace>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
+    <EnableNETAnalyzers>false</EnableNETAnalyzers>
   </PropertyGroup>
 
 </Project>
