--- a/editorconfig/dotnet/.editorconfig
+++ b/editorconfig/dotnet/.editorconfig
@@ -14,7 +14,7 @@ indent_style = tab
 indent_style = tab
 max_line_length = 130
 
-[*.{xml,csproj,vbproj,props,targets,resx,vsixmanifest,runsettings,json,slnf,yml,yaml}]
+[*.{xml,csproj,vbproj,props,targets,resx,vsixmanifest,runsettings,config,json,slnf,yml,yaml}]
 indent_style = space
 indent_size = 2
 
