--- a/editorconfig/dotnet/.editorconfig
+++ b/editorconfig/dotnet/.editorconfig
@@ -52,6 +52,7 @@ dotnet_style_null_propagation = true:suggestion
 dotnet_code_quality_unused_parameters = all:suggestion
 dotnet_sort_system_directives_first = true
 dotnet_separate_import_directive_groups = false
+dotnet_style_namespace_match_folder = true
 dotnet_remove_unnecessary_suppression_exclusions = none
 file_header_template = unset
 
@@ -125,6 +126,7 @@ csharp_space_between_empty_square_brackets = false
 csharp_space_between_square_brackets = false
 csharp_preserve_single_line_statements = false
 csharp_preserve_single_line_blocks = true
+csharp_style_namespace_declarations = file_scoped:suggestion
 
 [*.vb]
 visual_basic_preferred_modifier_order = Partial,Default,Private,Protected,Public,Friend,NotOverridable,Overridable,MustOverride,Overloads,Overrides,MustInherit,NotInheritable,Static,Shared,Shadows,ReadOnly,WriteOnly,Dim,Const,WithEvents,Widening,Narrowing,Custom,Async:suggestion
